# github-webhook

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: deploy.yml
src/: asgi.py  main.py  manage.py
src/api/: __init__.py  github.py  misc.py  telegram.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  bot.py  decorators.py  enums.py  logger.py  middlewares.py  server.py
src/core/utils/: bot.py  command_validator.py  logger.py
src/database/: __init__.py  alembic.ini  config.py  enums.py
src/database/migrations/: env.py
src/database/migrations/versions/: 09e2ed83bb82_nullable_chat_id.py  50f03acda0d2_gh_repo_title.py  86beb1e8d406_repo_chat_id_fk.py  b4bbf5b312c0_init.py
src/database/models/: __init__.py  base.py  github.py  telegram.py
src/database/models/orm/: manager.py
src/etc/commands/: __init__.py  base.py  db.py  db_utils.py  server.py
src/handlers/: __init__.py
src/handlers/api/: github.py  telegram.py
src/handlers/api/models/github/: events.py  shared.py
src/handlers/bot/: __init__.py  chat.py  private.py
src/handlers/bot/validators/: chat.py
src/handlers/chat/: __init__.py
src/handlers/github/: __init__.py  events.py
src/handlers/github/events/: __init__.py  base.py  create.py  delete.py  ping.py  push.py
src/handlers/github/models/: events.py  headers.py  shared.py
src/scripts/: entrypoint.sh  healthcheck.sh
